# lgl-system-loadout

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  lgl-system-loadout.policy
.github/workflows/: ci.yml  codeql.yml  flawfinder.yml
packaging/: com.linuxgamerlife.lgl-system-loadout.desktop  com.linuxgamerlife.lgl-system-loadout.metainfo.xml  lgl-system-loadout.desktop  lgl-system-loadout.metainfo.xml  lgl-system-loadout.policy  lgl-system-loadout.spec
src/: installworker.cpp  installworker.h  main.cpp  mainwizard.cpp  mainwizard.h  pagehelpers.h
src/helper/: commandexecutor.cpp  commandexecutor.h  helperserver.cpp  helperserver.h  main.cpp
src/pages/: browserspage.cpp  browserspage.h  cachyospage.cpp  cachyospage.h  commspage.cpp  commspage.h  contentpage.cpp  contentpage.h  donepage.cpp  donepage.h  gamingpage.cpp  gamingpage.h  gpupage.cpp  gpupage.h  installpage.cpp  installpage.h  kineticwepage.cpp  kineticwepage.h  lgltoolkitpage.cpp  lgltoolkitpage.h  multimediapage.cpp  multimediapage.h  pythonpage.cpp  pythonpage.h  repospage.cpp  repospage.h  reviewpage.cpp  reviewpage.h  scxpage.cpp  scxpage.h  systemtoolspage.cpp  systemtoolspage.h  themingpage.cpp  themingpage.h  updatepage.cpp  updatepage.h  virtpage.cpp  virtpage.h  welcomepage.cpp  welcomepage.h
tests/: tst_installworker.cpp
